# automated_testing_on_python

./: hw12_bank.py  hw12_library.py  hw13_deck.py  logging_config.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: mypy.yaml
HW20/tests/: unittest_bank.py  unittest_lib.py
HW21/tests/: bank_pytest.py  pytest.ini  test_bank.py  test_lib.py
HW22/: .gitignore
HW22/tests/: test_bank.py  test_lib.py
HW24/: pytest.ini  test_sausedemo.py
HW24/pages/: base_page.py  cart_page.py  checkout_step_one_page.py  checkout_step_two_page.py  complete_page.py  navbar_page.py  product_page.py
HW24/tests/: test_checkout.py
flask-app/: Dockerfile  README.md  app.py
hw_10/: hw10_task1.py  hw10_task2.py  hw10_task3.py
hw_11/: hw11_task1.py  hw11_task2.py  hw11_task3.py  hw11_task4.py
hw_12/: hw12_bank.py
hw_13/: hw13_deck.py
hw_14/: hw14_dt.py  hw14_files.py  hw14_re.py  hw14_text.txt  students.txt  test_text.txt
hw_15/: dataFC.json  hw15_enum.py  hw15_json.py  hw15_xml.py  hw15_yaml.py  info_about_books.yaml  products.xml
hw_20/tests/: unittest_bank.py  unittest_lib.py
hw_21/tests/: test_bank.py  test_lib.py
hw_22/tests/: test_bank.py  test_lib.py
hw_23/: test_saucedemo.py
hw_24/: .gitignore  conftest.py  pytest.ini
hw_24/pages/: base_page.py  cart_page.py  checkout_step_one_page.py  checkout_step_two_page.py  complete_page.py  login_page.py  navbar_page.py  product_page.py
hw_24/test_data/: checkout_data.py  prod_data.py  users.py
hw_24/tests/: test_add_to_cart.py  test_checkout.py  test_login.py
hw_28/: .gitignore  pyproject.toml  pytest.ini  requirements.txt
hw_28/config/: settings.py
hw_28/tests/: conftest.py  test_auth.py  test_delete_bookings.py  test_get_bookings.py  test_patch_bookings.py  test_post_bookings.py  test_put_bookings.py
hw_6/: homework6.py
hw_7/: hw7_task1.py  hw7_task2.py  hw7_task3.py
hw_8/: hw8_task1.py  hw8_task2.py  hw8_task3.py
hw_9/: hw9_numb_opposite.py  hw9_subsequence.py  hw9_validate.py
test_2/: task1.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py
(+9 files in other folders)
