[project]
name = "pyCourse"
version = "0.0.3"
description = "Project for students to complete homeworkы for the course automated testing in Python"
readme = "README.md"
requires-python = ">=3.9"

[tool.ruff]
exclude = [
    ".venv",
    "tests"
]
output-format = 'github'
line-length = 120

[tool.mypy]
install_types = true
non_interactive = true
ignore_missing_imports = true
exclude = [
    "venv",
    "tests"
]

[tool.pylint.MASTER]
init-hook = "import sys; sys.path.append('.')"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "W0621",  # redefined-outer-name (нужно для pytest фикстур)
    "W0613",  # unused-argument (параметры фикстур)
    "C0413",  # wrong-import-position (после sys.path.insert)
    "E0401",  # import-error (динамические пути)
    "R0801",  # duplicate-code (в тестах допустимо)
    "R0903",  # too-few-public-methods
]

[tool.pylint.FORMAT]
max-line-length = 120

argument-naming-style = "snake_case"
variable-naming-style = "snake_case"
function-naming-style = "snake_case"
method-naming-style = "snake_case"
module-naming-style = "snake_case"
ignore-paths = [
    'venv/*',
    'tests/*'
]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "empty-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "no-else-return",
    "too-few-public-methods"
]

[tool.flake8]
max-line-length = 120
count = true
statistics = true
show-source = true
max-complexity = 10
exclude = [
    ".git",
    "__pycache__",
    "venv",
    "tests"
]

extend-ignore = ["E501", "E402"]
